--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,9 @@ spring.mvc.throw-exception-if-no-handler-found=true
 spring.main.allow-bean-definition-overriding=true
 
 
+#logging
+logging.level.org.springframework.web=DEBUG
+logging.level.com.atm=DEBUG
+logging.file=/usr/local/tomcat9/logs/atm-logs/machine-logging.log
+
+
